fix z-index and font problems

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 :host {
     all: initial;
-    font-family: system-ui;
+    font-family: system-ui !important;
     color: black;
 }
 
